--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,7 +27,13 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.collection == 'publications' %}
-            <h1 class="page__title" itemprop="headline">({{ page.date | default: "1900-01-01" | date: "%Y" }}) {{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
+            <h1 class="page__title" itemprop="headline">
+              {% if page.link %}
+                <a href="{{ page.link }}" rel="noopener" target="_blank">({{ page.date | default: "1900-01-01" | date: "%Y" }}) {{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
+              {% else %}
+                ({{ page.date | default: "1900-01-01" | date: "%Y" }}) {{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}
+              {% endif %}
+            </h1>
           {% elsif page.title %}
             <h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
           {% endif %}
